--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
         $update.appendTo($body);
         
         //show tweets in reverse chron order
+        var $tweets = $('<section></section>');
         var index = streams.home.length - 1;
         while(index >= 0){
           var tweet = streams.home[index];
           var $tweet = $('<div></div>');
           $tweet.text('@' + tweet.user + ': ' + tweet.message);
-          $tweet.appendTo($body);
+          $tweet.appendTo($tweets);
           index -= 1;
         }
+        $tweets.appendTo($body);
 
       });
 
