--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="jquery.js"></script>
+    <script src="date_format.js"></script>
     <script src="data_generator.js"></script>
   </head>
   <body>
@@ -17,7 +18,7 @@
           for (index = 0; index < streams.home.length; index++) {
             var tweet = streams.home[index];
             var $tweet = $('<div></div>');
-            $tweet.text('@' + tweet.user + ': ' + tweet.message);
+            $tweet.text('@' + tweet.user + ': ' + tweet.message + ' (' + tweet.created_at.format("mmm d yyyy, h:MM TT") + ')');
             $tweet.prependTo($tweets);
           }
         }
