--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
           var index;
           for (index = 0; index < streams.home.length; index++) {
             var tweet = streams.home[index];
-            var $tweet = $('<div></div>');
-            $tweet.text('@' + tweet.user + ': ' + tweet.message + ' (' + tweet.created_at.format("mmm d yyyy, h:MM TT") + ')');
-            $tweet.prependTo($tweets);
+            var $user = $('<a id="' + tweet.user + '" href="#"></a>');
+            $user.text('@' + tweet.user);
+            var $tweet = $('<span></span>');
+            $tweet.text(tweet.message + ' (' + tweet.created_at.format("mmm d yyyy, h:MM TT") + ')');
+            var $entry = $('<div></div>');
+            $entry.append($user);
+            $entry.append(': ');
+            $entry.append($tweet);
+            $tweets.prepend($entry);
           }
         }
         
