Changed userTweet show to slideToggle (note: previously had strange bug where tweet would disappear - may still occur)

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 $userTweet.text(streams.users[user][i].message);
                 $userTweets.prepend($userTweet);
               }
-              $userTweets.show();
+              $userTweets.slideToggle();
             });
           }
         }
